[package]
name = "cloud-sandbox"
version = "0.1.0"
authors = ["mao"]
edition = "2018"
default-run = "wsserver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.82"
tokio = { version = "1.0", features = ["rt", "macros", "rt-multi-thread", "net", "io-util", "process"] }
tungstenite = { version = "0.12" }
tokio-tungstenite = "0.13"
futures = "0.3.9"
thiserror = "1.0"
# shiplift = { git = "https://github.com/micromaomao/shiplift.git" }
shiplift = { path = "../shiplift" }

[[bin]]
name = "innerbin"
path = "src/innerbin.rs"

[[bin]]
name = "wsserver"
path = "src/wsserver.rs"
